# fastapi_with_strawberry

./: README.md  app.py  config.py  core.py  database.py  models.py  mutation.py  pyproject.toml  query.py  schema.py
migrations/: env.py
migrations/versions/: 4ba0ef673305_initial_migration.py
